# grand

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codspeed.yml  python-package.yml
docs/: Backend-Caches.md  ImplementationNotes.md  README.md  What-About-Neptune-Dramatic-Retelling.md  What-About-Neptune.md
docs/reference/backends/: _dataframe.py.md  _dynamodb.py.md  _gremlin.py.md  _igraph.py.md  _networkit.py.md  _networkx.py.md  _sqlbackend.py.md  backend.py.md  dynamodb.py.md  gremlin.py.md  igraph.py.md  networkx.py.md  sqlbackend.py.md
docs/reference/dialects/: dialects.md
docs/reference/grand/: grand.md
grand/: __init__.py  test_graph.py  test_networkx_backend.py
grand/backends/: __init__.py  _dataframe.py  _dynamodb.py  _gremlin.py  _igraph.py  _networkit.py  _networkx.py  _sqlbackend.py  backend.py  dynamodb.py  gremlin.py  igraph.py  metadatastore.py  networkit.py  networkx.py  sqlbackend.py  test_backends.py  test_cached_backend.py  test_dynamodbbackend.py  test_metadatastore.py  test_networkx_backend.py  test_sqlbackend.py
grand/dialects/: __init__.py  test_dialect.py  test_igraph_dialect.py
