[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grand-graph"
dynamic = ["version"]
description = "Graph database wrapper for non-graph datastores"
readme = "README.md"
license = ""
authors = [
    { name = "Jordan Matelsky", email = "opensource@matelsky.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cachetools",
    "networkx>=2.4",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dynamodb = [
    "boto3",
]
igraph = [
    "igraph",
]
networkit = [
    "cmake",
    "cython",
    "networkit",
    "numpy<2.0.0",
]
sql = [
    "SQLAlchemy>=1.3",
]

[project.urls]
Homepage = "https://github.com/aplbrain/grand"

[tool.hatch.version]
path = "grand/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/grand",
]
