[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grand-graph"
dynamic = ["version"]
description = "Graph database wrapper for non-graph datastores"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Jordan Matelsky", email = "opensource@matelsky.com" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cachetools",
    "networkx>=2.4",
    "numpy",
    "pandas",
    "pytest-codspeed>=3.2.0",
    "pytest-cov>=6.1.1",
]

[project.optional-dependencies]
dynamodb = [
    "boto3",
]
igraph = [
    "igraph",
]
networkit = [
    "cmake",
    "cython",
    "networkit",
    "numpy<2.0.0",
]
sql = [
    "SQLAlchemy>=1.3",
]

[project.urls]
Homepage = "https://github.com/aplbrain/grand"

[tool.hatch.version]
path = "grand/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/grand",
]

[tool.hatch.build.targets.wheel]
packages = ["grand"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]
